Se crea funcion clearUserErrors para eliminar erroes en peticion GET al entrar en el componente Register y Login

--- a/src/i18n/locales/en/Landing/07InspiredByLastSaw/EnInspiredByLastSaw.json
+++ b/src/i18n/locales/en/Landing/07InspiredByLastSaw/EnInspiredByLastSaw.json
@@ -1,5 +1,5 @@
 {
     "inspiredByLastSaw": {
-        "inspired__By_Last_Saw": "Inspired by What You Saw"
+        "inspired__By_Last_Saw": "Inspired by what you saw"
     }
 }
