--- a/src/i18n/locales/en/Landing/03BestSellingProducts/EnBestSellingProducts.json
+++ b/src/i18n/locales/en/Landing/03BestSellingProducts/EnBestSellingProducts.json
@@ -1,6 +1,6 @@
 {
     "bestSellingProducts": {
-        "best__Sellers": "Best Sellers of the Week",
+        "best__Sellers": "Best sellers of the week",
         "see__All": "See All"
     }
 }
